{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 353,
  "lineage": "d3127c7d-eb94-432b-4012-7f3a4e3aadb6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec45aad637a1eb1f",
            "arn": "arn:aws:ec2:us-east-1:841162705069:elastic-ip/eipalloc-0ec45aad637a1eb1f",
            "domain": "vpc",
            "id": "eipalloc-0ec45aad637a1eb1f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-250-92.compute-1.amazonaws.com",
            "public_ip": "52.204.250.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:internet-gateway/igw-0cab818a4b3919253",
            "id": "igw-0cab818a4b3919253",
            "owner_id": "841162705069",
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:841162705069:loadbalancer/app/backend-alb/22c61fb07d396050",
            "arn_suffix": "app/backend-alb/22c61fb07d396050",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-1268822369.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:841162705069:loadbalancer/app/backend-alb/22c61fb07d396050",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bad3c43aa7a349d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-048a29fd599df321b"
              },
              {
                "subnet_id": "subnet-07fbf56af65c7cb8d"
              }
            ],
            "subnets": [
              "subnet-048a29fd599df321b",
              "subnet-07fbf56af65c7cb8d"
            ],
            "vpc_id": "vpc-0cc1aa0caf45cca7a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.application-load-balancer-sg",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet-2",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:841162705069:listener/app/backend-alb/22c61fb07d396050/b296ae91b019b844",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:841162705069:targetgroup/backend-target-group/9a0e504397c3410b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:841162705069:listener/app/backend-alb/22c61fb07d396050/b296ae91b019b844",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:841162705069:loadbalancer/app/backend-alb/22c61fb07d396050",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend-load-balancer",
            "aws_lb_target_group.backend-target-group",
            "aws_security_group.application-load-balancer-sg",
            "aws_subnet.public-subnet",
            "aws_subnet.public-subnet-2",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:841162705069:targetgroup/backend-target-group/9a0e504397c3410b",
            "arn_suffix": "targetgroup/backend-target-group/9a0e504397c3410b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:841162705069:targetgroup/backend-target-group/9a0e504397c3410b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-target-group",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec45aad637a1eb1f",
            "association_id": "eipassoc-06d652f0db83c6d3e",
            "connectivity_type": "public",
            "id": "nat-0ed0765785d7b6346",
            "network_interface_id": "eni-0937643d92e6309c1",
            "private_ip": "10.0.1.179",
            "public_ip": "52.204.250.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048a29fd599df321b"
          },
          "dependencies": [
            "aws_eip.eip-for-natgateway",
            "aws_subnet.public-subnet",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-route-table-to-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:route-table/rtb-051dc5f46e17f63df",
            "id": "rtb-051dc5f46e17f63df",
            "owner_id": "841162705069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cab818a4b3919253",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:route-table/rtb-05097ab448a77b729",
            "id": "rtb-05097ab448a77b729",
            "owner_id": "841162705069",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ed0765785d7b6346",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-natgateway",
            "aws_nat_gateway.NAT",
            "aws_subnet.public-subnet",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-to-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1a94474a7629179",
            "route_table_id": "rtb-05097ab448a77b729",
            "subnet_id": "subnet-0365f92c42cd971fc"
          },
          "dependencies": [
            "aws_eip.eip-for-natgateway",
            "aws_nat_gateway.NAT",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet-2",
            "aws_subnet.public-subnet",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-to-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47682122eeb2e6b",
            "route_table_id": "rtb-05097ab448a77b729",
            "subnet_id": "subnet-0793e4e7a6ac00576"
          },
          "dependencies": [
            "aws_eip.eip-for-natgateway",
            "aws_nat_gateway.NAT",
            "aws_route_table.private-route-table-1",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-to-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce342814479fb72",
            "route_table_id": "rtb-051dc5f46e17f63df",
            "subnet_id": "subnet-048a29fd599df321b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.nat-route-table-to-internet-gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application-load-balancer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:security-group/sg-0bad3c43aa7a349d5",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bad3c43aa7a349d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg-20250407065921763500000002",
            "name_prefix": "alb_sg-",
            "owner_id": "841162705069",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-service-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:security-group/sg-0a919329e3ba88e9f",
            "description": "Security group for ECS service in private subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a919329e3ba88e9f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bad3c43aa7a349d5"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "ecs_service_sg-20250407065926570900000005",
            "name_prefix": "ecs_service_sg-",
            "owner_id": "841162705069",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.application-load-balancer-sg",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:subnet/subnet-0793e4e7a6ac00576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0793e4e7a6ac00576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841162705069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:subnet/subnet-0365f92c42cd971fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0365f92c42cd971fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841162705069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "dependencies": [
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:subnet/subnet-048a29fd599df321b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048a29fd599df321b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841162705069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "dependencies": [
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:subnet/subnet-07fbf56af65c7cb8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fbf56af65c7cb8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841162705069",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cc1aa0caf45cca7a"
          },
          "dependencies": [
            "aws_vpc.task-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841162705069:vpc/vpc-0cc1aa0caf45cca7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9c1b5d1f844b5a2",
            "default_route_table_id": "rtb-0ad61acf8cdcc1786",
            "default_security_group_id": "sg-0eb2205f61f990043",
            "dhcp_options_id": "dopt-0d23cced29aec4cc0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc1aa0caf45cca7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad61acf8cdcc1786",
            "owner_id": "841162705069"
          }
        }
      ]
    }
  ]
}